@@ -179,7 +179,7 @@ int be_visitor_array_ci::visit_array (be_array *node)
                       '\0',
                       NAMEBUFSIZE);
       ACE_OS::sprintf (buf,
-                       "_%ld",
+                       "_%d",
                        node->dims ()[i]->ev ()->u.ulval);
       unique += buf;
     }
